--- a/index.html
+++ b/index.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <script src="main.js" type="module" defer></script>
-    <title>Sodoku</title>
+    <title>Snake Game</title>
 </head>
+
 <body>
-    
+    <div name="configContainer" id="configContainer" class="flex">
+        <div id="difficultyContainer">
+            <span>Difficulty:</span>
+            <select id="difficulty">
+                <option value="0">Very easy</option>
+                <option value="1">Easy</option>
+                <option value="2" selected>Default</option>
+                <option value="3">Hard</option>
+                <option value="4">Very hard</option>
+            </select>
+        </div>
+        <div id="gameActions">
+            <button id="startGame">Start</button>
+            <button id="pauseGame">Pause</button>
+            <button id="resetGame">Reset</button>
+        </div>
+        <div id="gamePoints">Punkte: <span id="gamePointsCounter">0</span></div>
+    </div>
 </body>
+
 </html>
