added game grid

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
         </div>
         <div id="gamePoints">Punkte: <span id="gamePointsCounter">0</span></div>
     </div>
+
+    <div id="gameContainer">
+
+    </div>
 </body>
 
 </html>
